# hermescheck

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/PULL_REQUEST_TEMPLATE/: maintainer-change.md  self-scan-contribution.md
.github/scripts/: validate_pr_body.py  validate_repo_hygiene.py
.github/workflows/: ci.yml  pr-governance.yml
contributions/: README.md
docs/: AGENT_PROMPT.md
docs/doctrine/: README.md  agent-os.md  architecture.md  cli-process-pool.md  completion-closure.md  contribution-backflow.md  impression-memory.md  maturity-score.md  mission.md  orchestration.md  stateful-agent.md  target-agent-self-review.md
docs/examples/: contribution-examples.md
hermescheck/: __init__.py  __main__.py  audit.py  cli.py  config.py  contribute.py  maturity.py  report.py  sarif.py  schema.json  schema.py  self_review.py
scripts/: gen-skill.py
tests/: test_cli.py  test_completion_closure_scanner.py  test_contribute.py  test_excessive_agency.py  test_hermes_contract_scanner.py  test_impression_memory_scanner.py  test_internal_architecture_scanners.py  test_knowledge_consistency_scanner.py  test_maturity_score.py  test_mercury_runtime_scanners.py  test_observability_scanner.py  test_os_architecture_scanner.py  test_profile_strictness.py  test_report_schema.py  test_sarif.py  test_scanner_false_positives.py  test_self_evolution_capability.py  test_token_usage_scanner.py
vscode-extension/: CHANGELOG.md  README.md  extension.js  package.json
(+46 files in other folders)
